Add Bootstrap JS and CSS links and meta info

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,6 @@
-#main-nav {
+nav {
   height: 120px;
-  background-color: lightseagreen;
+  background-color: #0f606b;
 }
 
 @media (min-width: 992px) {
