--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home Page</title>
+
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Icons Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
@@ -12,15 +15,66 @@
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/checkout.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
 
+    <title>Checkout</title>
+
   </head>
 
   <body>
     <%- include('partials/_header') %>
-    <h1>Hello World!</h1>
+    <main>
+      <!-- This is where we will append food items -->
+      <!-- <section class="checkout-container">
+        <section class="order-info">
+          <h2>Your Order</h2>
+          <div></div>
+        </section> -->
+
+        <!-- This is where we will append total info -->
+        <!-- <section class="place-order">
+          <h2>Place Your Order</h2>
+          <div></div>
+          <form action="/myorders" method="post">
+            <button type="submit">Confirm</button>
+          </form>
+        </section>
+
+
+        <div class="continue">
+          <button type="submit"><a href="/">Continue Shopping</a></button>
+        </div>
+      </section> -->
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <section class="order-info">
+              <h2>Your Order</h2>
+              <div></div>
+            </section>
+          </div>
+          <div class="col">
+            <section class="place-order">
+              <h2>Place Your Order</h2>
+              <div></div>
+              <form action="/myorders" method="post">
+                <button type="submit">Confirm</button>
+              </form>
+            </section>
+          </div>
+        </div>
+      </div>
+      <div class="continue">
+        <button type="submit"><a href="/">Continue Shopping</a></button>
+      </div>
+    </main>
+  <!-- Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
