--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light" id="main-nav">
+<nav class="navbar navbar-expand-lg navbar-dark" id="main-nav">
   <a class="navbar-brand" href="/">mood4food</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -17,4 +17,3 @@
     </ul>
   </div>
 </nav>
-
