--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,53 +4,91 @@
     <title>Home Page</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
 
     <!-- Icons Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
 
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/index.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
-
   </head>
 
   <body>
     <%- include('partials/_header') %>
-    <!-- profile header displays name and picture -->
+
+    <!-- home page header with restaurant name and welcome message. -->
     <header>
-      <div>
-        <img src="/midterm/mood4food/public/images/restaurant_img.png" class="img-fluid" alt="restaurant logo">
-      </div>
-      <br />
-      <div>
-        <h2>Restaurant Name</h2>
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Welcome to our Restaurant!</h1>
+          <p class="lead">
+            Browse our menu and fill your cart. When you're ready to order,
+            click checkout in the top right corner. We will notify you via sms
+            your order status. Enjoy!
+          </p>
+        </div>
       </div>
     </header>
 
-    <!-- Page-specific (main) content here -->
-    <main class="container">
-      <section class="new-tweet">
-
-          <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
-          <div class="form-footer">
-            <button type="submit" id="submit-tweet">Tweet</button>
-            <output name="counter" class="counter" for="tweet-text">140</output>
-          </div>
-
-      </section>
-      <!-- tweet container -->
-      <section id="tweets-container"></section>
-      <button id="topButton" title="Go to top">&#8679;</button>
+    <main>
+      <table class="table table-responsive">
+        <thead class="thead-light">
+          <tr>
+            <th scope="col">Image</th>
+            <th scope="col">Cost</th>
+            <th scope="col">Name</th>
+            <th scope="col">Description</th>
+            <th scope="col">Add to Cart</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">
+              <img src="/midterm/mood4food/public/images/hamburger.jpg" />
+            </th>
+            <td>$10.00</td>
+            <td>Hamburger</td>
+            <td>Hamburger with lettuce, tomato and onion.</td>
+            <td><button type="button" class="btn btn-success">Add</button></td>
+          </tr>
+          <tr>
+            <th scope="row">
+              <img src="/midterm/mood4food/public/images/hamburger.jpg" />
+            </th>
+            <td>$15.00</td>
+            <td>Pasta</td>
+            <td>Spaghetti and meatballs.</td>
+            <td><button type="button" class="btn btn-success">Add</button></td>
+          </tr>
+          <tr>
+            <th scope="row">
+              <img src="/midterm/mood4food/public/images/hamburger.jpg" />
+            </th>
+            <td>$8.00</td>
+            <td>Salad</td>
+            <td>Green salad with vinagrette dressing.</td>
+            <td><button type="button" class="btn btn-success">Add</button></td>
+          </tr>
+        </tbody>
+      </table>
     </main>
-  </body>
 
-  <footer></footer>
-
+    <footer></footer>
   </body>
 </html>
