fixed centering of table

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,46 +47,56 @@
     </header>
 
     <main>
-      <table class="table table-responsive">
-        <thead class="thead-light">
-          <tr>
-            <th scope="col">Image</th>
-            <th scope="col">Cost</th>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-            <th scope="col">Add to Cart</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">
-              <img src="/midterm/mood4food/public/images/hamburger.jpg" />
-            </th>
-            <td>$10.00</td>
-            <td>Hamburger</td>
-            <td>Hamburger with lettuce, tomato and onion.</td>
-            <td><button type="button" class="btn btn-success">Add</button></td>
-          </tr>
-          <tr>
-            <th scope="row">
-              <img src="/midterm/mood4food/public/images/hamburger.jpg" />
-            </th>
-            <td>$15.00</td>
-            <td>Pasta</td>
-            <td>Spaghetti and meatballs.</td>
-            <td><button type="button" class="btn btn-success">Add</button></td>
-          </tr>
-          <tr>
-            <th scope="row">
-              <img src="/midterm/mood4food/public/images/hamburger.jpg" />
-            </th>
-            <td>$8.00</td>
-            <td>Salad</td>
-            <td>Green salad with vinagrette dressing.</td>
-            <td><button type="button" class="btn btn-success">Add</button></td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="row justify-content-center">
+        <div class="col-auto">
+          <table class="table table-responsive">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col">Image</th>
+                <th scope="col">Cost</th>
+                <th scope="col">Name</th>
+                <th scope="col">Description</th>
+                <th scope="col">Add to Cart</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">
+                  <img src="/midterm/mood4food/public/images/hamburger.jpg" />
+                </th>
+                <td>$10.00</td>
+                <td>Hamburger</td>
+                <td>Hamburger with lettuce, tomato and onion.</td>
+                <td>
+                  <button type="button" class="btn btn-success">Add</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">
+                  <img src="/midterm/mood4food/public/images/hamburger.jpg" />
+                </th>
+                <td>$15.00</td>
+                <td>Pasta</td>
+                <td>Spaghetti and meatballs.</td>
+                <td>
+                  <button type="button" class="btn btn-success">Add</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">
+                  <img src="/midterm/mood4food/public/images/hamburger.jpg" />
+                </th>
+                <td>$8.00</td>
+                <td>Salad</td>
+                <td>Green salad with vinagrette dressing.</td>
+                <td>
+                  <button type="button" class="btn btn-success">Add</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </main>
 
     <footer></footer>
