--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,7 +62,7 @@
             <tbody>
               <tr>
                 <th scope="row">
-                  <img src="/midterm/mood4food/public/images/hamburger.jpg" />
+                  <img src="https://picsum.photos/200" />
                 </th>
                 <td>$10.00</td>
                 <td>Hamburger</td>
@@ -73,7 +73,7 @@
               </tr>
               <tr>
                 <th scope="row">
-                  <img src="/midterm/mood4food/public/images/hamburger.jpg" />
+                  <img src="https://picsum.photos/200" />
                 </th>
                 <td>$15.00</td>
                 <td>Pasta</td>
@@ -84,7 +84,7 @@
               </tr>
               <tr>
                 <th scope="row">
-                  <img src="/midterm/mood4food/public/images/hamburger.jpg" />
+                  <img src="https://picsum.photos/200" />
                 </th>
                 <td>$8.00</td>
                 <td>Salad</td>
