Add dummy items to order page and change font in nav bar

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,6 +1,11 @@
 nav {
   height: 120px;
   background-color: #0f606b;
+  font-family: 'Roboto', sans-serif;
+}
+
+.navbar-brand {
+  font-family: 'Comfortaa', cursive;
 }
 
 @media (min-width: 992px) {
