--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -44,7 +44,62 @@
           <div class="col">
             <section class="order-info">
               <h2>Your Order</h2>
-              <div></div>
+              <div class="row justify-content-center">
+                <div class="col-auto">
+                  <table class="table table-responsive">
+                    <thead class="thead-light">
+                      <tr>
+                        <th scope="col">Image</th>
+                        <th scope="col">Cost</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Add to Cart</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">
+                          <img src="https://picsum.photos/200" />
+                        </th>
+                        <td>$10.00</td>
+                        <td>Hamburger</td>
+                        <td>Hamburger with lettuce, tomato and onion.</td>
+                        <td>
+                          <button type="button" class="btn btn-success">+</button>
+                          <button type="button" class="btn btn-success">-</button>
+                          <button type="button" class="btn btn-success">x</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">
+                          <img src="https://picsum.photos/200" />
+                        </th>
+                        <td>$15.00</td>
+                        <td>Pasta</td>
+                        <td>Spaghetti and meatballs.</td>
+                        <td>
+                          <button type="button" class="btn btn-success">+</button>
+                          <button type="button" class="btn btn-success">-</button>
+                          <button type="button" class="btn btn-success">x</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">
+                          <img src="https://picsum.photos/200" />
+                        </th>
+                        <td>$8.00</td>
+                        <td>Salad</td>
+                        <td>Green salad with vinagrette dressing.</td>
+                        <td>
+                          <button type="button" class="btn btn-success">+</button>
+                          <button type="button" class="btn btn-success">-</button>
+                          <button type="button" class="btn btn-success">x</button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
             </section>
           </div>
           <div class="col">
@@ -59,7 +114,7 @@
         </div>
       </div>
       <div class="continue">
-        <button type="submit"><a href="/">Continue Shopping</a></button>
+        <button type="submit" class="btn btn-success"><a href="/">Continue Shopping</a></button>
       </div>
     </main>
   <!-- Bootstrap JS -->
