Added dummy table to place order and added flex styling to buttons

--- a/styles/checkout.scss
+++ b/styles/checkout.scss
@@ -8,3 +8,12 @@
 .container {
   padding-top: 2em;
 }
+
+.edit-cart {
+  display: flex;
+}
+
+.place-order form {
+  display: flex;
+  justify-content: flex-end;
+}
