adding correct path for partial header under login registration page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-  <%- include('../public/views/partials/_header') %> <main style="margin: 1em;">
+  <%- include('partials/_header') %>
+  <main style="margin: 1em;">
     <h3>Login</h3>
     <form class="form-inline" action="/login" method="POST">
       <div class="form-group mr-2">
