--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -7,12 +7,13 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <!-- internal css stylesheet -->
   <link rel="stylesheet" href="../styles/registration.css">
   <title>mood4food</title>
 </head>
 
 <body>
-<%- include('../public/views/partials/_header') %>
+  <%- include('partials/_header') %>
   <div class="signup-form">
     <form action="/registration" method="post">
       <h2>Register</h2>
