Create sass for myorders

--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -14,4 +14,19 @@
 .container {
   padding-top: 2em;
 }
+
+.edit-cart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.place-order form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
 /*# sourceMappingURL=checkout.css.map */
