--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,11 @@
 nav {
   height: 120px;
   background-color: #0f606b;
+  font-family: 'Roboto', sans-serif;
+}
+
+.navbar-brand {
+  font-family: 'Comfortaa', cursive;
 }
 
 @media (min-width: 992px) {
