--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/checkout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/login.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
@@ -42,18 +43,21 @@
   <div class="signin-form">
     <form action="/login" method="post">
       <h2>Login</h2>
-      <!-- <p class="hint-text">Create your account. It's free and only takes a minute.</p> -->
+      <p class="hint-text">Let's login and explore the good stuff</p>
+
       <div class="form-group">
-        <div class="row">
-          <input type="email" class="form-control" name="email" placeholder="Email" required="required">
-          <input type="password" class="form-control" name="password" placeholder="Password" required="required">
-        </div>
+        <input type="email" class="form-control" name="email" placeholder="Email" required="required">
+      </div>
+      <div class="form-group">
+        <input type="password" class="form-control" name="password" placeholder="Password" required="required">
       </div>
 
       <div class="form-group">
-        <button type="submit" class="btn btn-success btn-lg btn-block">Log In</button>
+        <button type="submit" class="btn btn-success btn-lg btn-block">Login Now</button>
       </div>
     </form>
+    <div class="text-center">Do not have an account? <a href="/register">Sign up</a></div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
