--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="/styles/registration.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/checkout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/sign_up.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
