--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -51,9 +51,9 @@
                     <thead class="thead-light">
                       <tr>
                         <th scope="col">Image</th>
-                        <th scope="col">Cost</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Qty</th>
+                        <th scope="col" class="item-cost">Cost</th>
+                        <th scope="col" class="item-name">Name</th>
+                        <th scope="col" class="item-qty">Qty</th>
                         <th scope="col">Edit Cart</th>
                       </tr>
                     </thead>
@@ -62,13 +62,13 @@
                         <th scope="row">
                           <img src="https://picsum.photos/200" />
                         </th>
-                        <td>$10.00</td>
+                        <td class="item-cost">$10.00</td>
                         <td>Hamburger</td>
-                        <td id="qty">0</td>
+                        <td class="qty">0</td>
                         <td class="edit-cart">
-                          <button type="button" class="btn btn-success" id="plus">+</button>
-                          <button type="button" class="btn btn-success" id="minus">-</button>
-                          <button type="button" class="btn btn-success" id="remove">x</button>
+                          <button type="button" class="btn btn-success plus">+</button>
+                          <button type="button" class="btn btn-success minus">-</button>
+                          <button type="button" class="btn btn-success remove">x</button>
                         </td>
                       </tr>
                       <tr>
@@ -77,22 +77,11 @@
                         </th>
                         <td>$15.00</td>
                         <td>Pasta</td>
+                        <td class="qty">0</td>
                         <td class="edit-cart">
-                          <button type="button" class="btn btn-success">+</button>
-                          <button type="button" class="btn btn-success">-</button>
-                          <button type="button" class="btn btn-success">x</button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th scope="row">
-                          <img src="https://picsum.photos/200" />
-                        </th>
-                        <td>$8.00</td>
-                        <td>Salad</td>
-                        <td class="edit-cart">
-                          <button type="button" class="btn btn-success" id="plus">+</button>
-                          <button type="button" class="btn btn-success" id="minus">-</button>
-                          <button type="button" class="btn btn-success" id="remove">x</button>
+                          <button type="button" class="btn btn-success plus">+</button>
+                          <button type="button" class="btn btn-success minus">-</button>
+                          <button type="button" class="btn btn-success remove">x</button>
                         </td>
                       </tr>
                     </tbody>
@@ -114,9 +103,9 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row">0</th>
-                    <td>Test</td>
-                    <td>Run</td>
+                    <th scope="row" class="total-qty"></th>
+                    <td class="total-item-name"></td>
+                    <td class="total-item-price"></td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
