--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -51,9 +51,10 @@
                     <thead class="thead-light">
                       <tr>
                         <th scope="col">Image</th>
-                        <th scope="col" class="item-cost">Cost</th>
-                        <th scope="col" class="item-name">Name</th>
-                        <th scope="col" class="item-qty">Qty</th>
+                        <th scope="col">Cost/Item</th>
+                        <th scope="col">Item Total</th>
+                        <th scope="col"></th>Name</th>
+                        <th scope="col">Qty</th>
                         <th scope="col">Edit Cart</th>
                       </tr>
                     </thead>
@@ -63,6 +64,7 @@
                           <img src="https://picsum.photos/200" />
                         </th>
                         <td class="item-cost">$10.00</td>
+                        <td class="item-total">$10.00</td>
                         <td>Hamburger</td>
                         <td class="qty">0</td>
                         <td class="edit-cart">
@@ -75,7 +77,8 @@
                         <th scope="row">
                           <img src="https://picsum.photos/200" />
                         </th>
-                        <td>$15.00</td>
+                        <td class="item-cost">$15.00</td>
+                        <td class="item-total">$10.00</td>
                         <td>Pasta</td>
                         <td class="qty">0</td>
                         <td class="edit-cart">
@@ -96,26 +99,21 @@
               <table class="table">
                 <thead>
                   <tr>
-                    <th scope="col">Qty</th>
-                    <th scope="col">Item</th>
-                    <th scope="col">Price</th>
+                    <th scope="col">Total</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row" class="total-qty"></th>
-                    <td class="total-item-name"></td>
-                    <td class="total-item-price"></td>
+                    <th scope="row">Item Total</th>
+                    <td class="order-total"></td>
                   </tr>
                   <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
+                    <th scope="row">HST/GST</th>
+                    <td class="order-tax"></td>
                   </tr>
                   <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
+                    <th scope="row">Grand Total</th>
+                    <td class="order-grand-total"></td>
                   </tr>
                 </tbody>
               </table>
