Add additional logic to so that clicking x removes parent's parent (table row)

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -59,9 +59,9 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <th scope="row">
-                          <img src="https://picsum.photos/200" />
+                      <tr class="cart-item">
+                        <th scope="row" >
+                          <img src="https://picsum.photos/200"/>
                         </th>
                         <td class="item-cost">$10.00</td>
                         <td class="item-total">$10.00</td>
@@ -73,7 +73,7 @@
                           <button type="button" class="btn btn-success remove">x</button>
                         </td>
                       </tr>
-                      <tr>
+                      <tr class="cart-item">
                         <th scope="row">
                           <img src="https://picsum.photos/200" />
                         </th>
