Fix funky name issue

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -53,7 +53,7 @@
                         <th scope="col">Image</th>
                         <th scope="col">Cost/Item</th>
                         <th scope="col">Item Total</th>
-                        <th scope="col"></th>Name</th>
+                        <th scope="col">Name</th>
                         <th scope="col">Qty</th>
                         <th scope="col">Edit Cart</th>
                       </tr>
