--- a/styles/checkout.scss
+++ b/styles/checkout.scss
@@ -17,3 +17,11 @@
   display: flex;
   justify-content: flex-end;
 }
+
+.btn-block {
+  margin-bottom: 3em;
+}
+
+.btn-block a {
+  color: white;
+}
