--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -123,10 +123,11 @@
             </section>
           </div>
         </div>
+        <div class="continue">
+          <button type="submit" class="btn btn-success btn-block"><a href="/">Continue Shopping</a></button>
+        </div>
       </div>
-      <div class="continue">
-        <button type="submit" class="btn btn-success"><a href="/">Continue Shopping</a></button>
-      </div>
+
     </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
