--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -44,7 +44,7 @@
         <div class="row">
           <div class="col">
             <section class="order-info">
-              <h2>Your Order</h2>
+              <h2>Your Cart</h2>
               <div class="row justify-content-center">
                 <div class="col-auto">
                   <table class="table table-responsive">
