--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -35,6 +35,22 @@
 }
 
 .btn-block a {
+  color: #0f606b;
+}
+
+.btn-block a:hover {
   color: white;
+}
+
+.btn-success {
+  color: #0f606b;
+  background-color: #a7d2dd;
+  border-color: #a7d2dd;
+  font-family: 'Comfortaa', cursive;
+}
+
+.btn-success:hover {
+  background-color: #f47068;
+  border-color: #f47068;
 }
 /*# sourceMappingURL=checkout.css.map */
