--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -3,7 +3,10 @@
 body {
   background-color: #EEE;
 
-  h1 {
-    color: lightblue;
+  h1, h2 {
+    color:#0f606b;
+    font-family: 'Comfortaa', cursive;
   }
+
+  font-family: 'Roboto', sans-serif;
 }
