--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,8 +110,7 @@
           </table>
         </div>
       </div>
-
-      <%= JSON.stringify(food_items) %>
+      <!--
       <div class="row justify-content-center">
         <div class="col-auto">
           <table class="table table-responsive">
@@ -127,11 +126,11 @@
             <tbody>
               <tr>
                 <th scope="row">
-                  <img src="<%= food_items.food_photo_url %> " />
+                  <img src="food_items.food_photo_url<%=  %> " />
                 </th>
-                <td><%= food_items.cost %></td>
-                <td><%= food_items.name %></td>
-                <td><%= food_items.description %></td>
+                <td>food_items.cost<%=  %></td>
+                <td>food_items.name<%=  %></td>
+                <td>food_items.description<%=  %></td>
                 <td>
                   <button type="button" class="btn btn-success">Add</button>
                 </td>
@@ -140,7 +139,7 @@
             </tbody>
           </table>
         </div>
-      </div>
+      </div> -->
     </main>
 
     <footer></footer>
