Make nav text bold for readability

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -6,19 +6,19 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav float-right">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Menu<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/"><strong>Menu</strong><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/login"><strong>Login</strong></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/register">Register</a>
+        <a class="nav-link" href="/register"><strong>Register</strong></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/myorders">My Orders</a>
+        <a class="nav-link" href="/myorders"><strong>My Orders</strong></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link cart" href="/checkout">Checkout<i class="fas fa-shopping-cart"></i></a>
+        <a class="nav-link cart" href="/checkout"><strong>Checkout</strong><i class="fas fa-shopping-cart"></i></a>
       </li>
     </ul>
   </div>
