--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,6 +62,7 @@
     <main>
       <div class="row justify-content-center">
         <div class="col-auto">
+          <% for(const food of menuItems) { %>
           <table class="table table-responsive">
             <thead class="thead-light">
               <tr>
@@ -75,33 +76,11 @@
             <tbody>
               <tr>
                 <th scope="row">
-                  <img src="https://picsum.photos/200" />
+                  <img src="<%= food.food_photo_url %>" />
                 </th>
-                <td>$10.00</td>
-                <td>Hamburger</td>
-                <td>Hamburger with lettuce, tomato and onion.</td>
-                <td>
-                  <button type="button" class="btn btn-success">Add</button>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  <img src="https://picsum.photos/200" />
-                </th>
-                <td>$15.00</td>
-                <td>Pasta</td>
-                <td>Spaghetti and meatballs.</td>
-                <td>
-                  <button type="button" class="btn btn-success">Add</button>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  <img src="https://picsum.photos/200" />
-                </th>
-                <td>$8.00</td>
-                <td>Salad</td>
-                <td>Green salad with vinagrette dressing.</td>
+                <td><%= food.cost %></td>
+                <td><%= food.name %></td>
+                <td><%= food.description %></td>
                 <td>
                   <button type="button" class="btn btn-success">Add</button>
                 </td>
@@ -110,36 +89,8 @@
           </table>
         </div>
       </div>
-      <!--
-      <div class="row justify-content-center">
-        <div class="col-auto">
-          <table class="table table-responsive">
-            <thead class="thead-light">
-              <tr>
-                <th scope="col">Image</th>
-                <th scope="col">Cost</th>
-                <th scope="col">Name</th>
-                <th scope="col">Description</th>
-                <th scope="col">Add to Cart</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">
-                  <img src="food_items.food_photo_url<%=  %> " />
-                </th>
-                <td>food_items.cost<%=  %></td>
-                <td>food_items.name<%=  %></td>
-                <td>food_items.description<%=  %></td>
-                <td>
-                  <button type="button" class="btn btn-success">Add</button>
-                </td>
-              </tr>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div> -->
+
+      <% } %>
     </main>
 
     <footer></footer>
