adding login logout functionality

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,11 +5,17 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav float-right">
-      <li class="nav-item active">
-        <a class="nav-link" href="/"><strong>Menu</strong><span class="sr-only">(current)</span></a>
-      </li>
+      <%if(userId) {%>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout"><strong>Logout</strong></a>
+        </li>
+        <%}else{%>
       <li class="nav-item">
         <a class="nav-link" href="/login"><strong>Login</strong></a>
+      </li>
+      <%}%>
+      <li class="nav-item active">
+        <a class="nav-link" href="/"><strong>Menu</strong><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/register"><strong>Register</strong></a>
